style/_components.scss
%menu-list {
	list-style: none;
	padding: 0;

	a {
		&[aria-current], #{$ready} {
			color: $ucla-gold;
		}
	}
}

.text-logo {
	height: 1em;
}

.social-link {
	font-size: x-large;

	&::after {
		content: ' ';
	}

	img {
		height: 1em;
	}
}

.fullwidth {
	width: 100%;
}

.stat-fancy {
	font-size: 1em;

	b {
		display: block;
		font-size: 3em;
		font-weight: normal;
	}
}

%divider-bottom:not(:last-child)::after {
	content: '';
	display: block;
	margin: 0 25%;
	border-bottom: $divider;
}

%media-link {
	&::after {
		font-variant: small-caps;
		margin-left: 1ex;
	}

	// TODO: use case-insensitive matching (not supported in IE, Edge)

	&[href$='.pdf']::after {
		content: 'pdf';
	}

	&[href$='.doc']::after, &[href$='.docx']::after {
		content: 'doc';
	}

	&[href$='.xls']::after, &[href$='.xlsx']::after {
		content: 'xls';
	}

	&[href$='.ppt']::after, &[href$='.pptx']::after {
		content: 'ppt';
	}

	&[href*='/forms/']::after, &[href*='forms.gle']::after {
		content: 'form';
	}

	&[href*='/document/']::after {
		content: 'gdoc';
	}

	&[href*='/spreadsheet/']::after {
		content: 'gsheet';
	}

	&[href*='/presentation/']::after {
		content: 'gslide';
	}
}

@mixin pop-out($amount, $inset: '') {
	border: thin solid rgba(0, 0, 0, 0.25);
	box-shadow: unquote($inset) 0 ($amount * 2px) 4px rgba(0, 0, 0, 0.25);
}

.button {
	@include pop-out(1);

	background-color: white;
	padding: 0.5ex 3ex;

	&.primary {
		background-color: rgba(59, 115, 169, 0.9);
		color: white;
	}

	#{$ready} {
		@include pop-out(2);
	}

	&:active {
		@include pop-out(1, inset);
	}
}

.people {
	@media #{$bp-not-main} {
		column-count: 2;
	}

	section {
		display: flex;
		break-inside: avoid-column;
	}

	@at-root .portrait {
		width: 10em;
		margin: 0 2em 2em 0;

		border: thin solid gray;
		padding: 2px;
	}

	main {
		flex-grow: 1;
	}

	p {
		margin: 0;
	}
}

.post img {
	width: $main-content-width * 0.7;
	max-width: 100%;
}

.inline-address {
	margin-left: 4ex;
}

.video-frame {
	position: relative;
	padding-top: (9 / 16) * 100%;

	iframe {
		position: absolute;
		top: 0;
		left: 0;
		bottom: 0;
		right: 0;

		width: 100%;
		height: 100%;
	}
}

